# applications

./: .gitignore  .travis.yml  Dockerfile  Makefile  Readme.md  docker-compose.yml  run.sh
.github/: build.yml
.github/workflows/: build-quarkus.yml
.run/: Middleware - Dev-mode.run.xml
contrib/: docker-compose.yml
data/dehydrated/: domains.txt
fieldmon/: README.md  angular.json  build.gradle.kts  package-lock.json  package.json  settings.gradle.kts
fieldmon/src/: index.html  polyfills.ts  styles.sass
middleware/: .gitignore  build.gradle.kts  gradle.properties
middleware-quarkus/: README.md
middleware-quarkus/contrib/: gen_jwt_key.sh
middleware.quarkus/: build.gradle.kts  settings.gradle.kts
middleware.quarkus/.run/: middleware.quarkus.main - simulating.run.xml
middleware/.run/: middleware.quarkus.main - dev-mode.run.xml
secrets/: henet_login.source.gpg
src/: Dockerfile  httpd.conf  init.sh  mosquitto.conf  stoneaggregator.config.ini  vars
src/MQTTMiddleware/: Cargo.toml  Settings.toml  aggregator.py  main.py  models.py  mqttservice.py
src/MQTTMiddleware/src/: main.rs  settings.rs
src/MQTTMiddleware/src/mqttservice/: mod.rs
src/StoneAggregator/: .gitignore  EXAMPLE_MSGS.md  LICENSE  README.md  aggregation.py  config-localhost.ini  requirements.txt
src/StoneSimulator/: .gitignore  LICENSE  README.md  simulator.py
src/apache/: check_bearer.json  fieldtracks.conf  vhosts.conf
src/configs/: mosquitto.conf
src/fieldmon/: angular.json  karma.conf.js  package-lock.json  (+2 more)
src/fieldmon.old/: angular.json  package-lock.json  package.json
(+175 files in other folders)
