[package]
name = "mqttmiddleware"
version = "0.1.0"
authors = ["Aaron Kaiser <a_kaiser@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.9.1"
config = "0.11"
serde_derive = "1.0.125"
serde = "1.0.125"